# DiscreteGradientExplorer

./: CMakeLists.txt  Instructions.txt  LICENSE  README.md  Sequence.txt  simple_viewer.cpp
data/: 9handles.off  klein.off  knot.off  mixed_terrain.off  mixed_terrain2.off  terrain.off  terrain2.off  tinyterrain.off
include/: base_cell_complex.h  computeGrad.h  index_iterator.h  index_type.h  unstructured_simplicial_complex.h
vcc/: basins.h  mergeTree.h  msc.h
